feat: rebrand to QTick with reusable components

--- a/src/app/style/scss/_custom.scss
+++ b/src/app/style/scss/_custom.scss
@@ -11,26 +11,27 @@
   --bs-muted-2: #444c55;
   --bs-body-color-rgb: 43, 43, 43;
   --bs-dark-text: #212529;
-  --bs-primary: #c71f37;
+  --bs-primary: #ff8c00;
+  --bs-secondary: #ffc107;
   --bs-light: #f7f7f7;
   --bs-light-gray: #ffffffa8;
   --bs-dark: #212529;
-  --bs-primary-rgb: 226, 55, 68;
+  --bs-primary-rgb: 255, 140, 0;
   --bs-light-rgb: 247, 247, 247;
   --bs-dark-rgb: 33, 37, 41;
-  --bs-primary-2: #d02b38;
-  --bs-primary-text-emphasis: #c71f37;
-  --bs-primary-bg-subtle: #fae8eb;
-  --bs-primary-bg-dark: #dd2e3b;
-  --bs-primary-border-subtle: #ffdee2;
-  --bs-danger-bg-subtle:#ffdee2;
+  --bs-primary-2: #ffb84d;
+  --bs-primary-text-emphasis: #ff8c00;
+  --bs-primary-bg-subtle: #fff4e0;
+  --bs-primary-bg-dark: #cc7000;
+  --bs-primary-border-subtle: #ffe0b3;
+  --bs-danger-bg-subtle:#ffe0b3;
   --headingColor: #2b2b2b;
   --bs-link-color: #212529;
   --bs-link-color-rgb: 28, 28, 28;
-  --bs-link-hover-color: #c71f37;
-  --bs-link-hover-color-rgb: 226, 55, 68;
+  --bs-link-hover-color: #ff8c00;
+  --bs-link-hover-color-rgb: 255, 140, 0;
   --bs-link-decoration: underline;
-  --bs-code-color: #c71f37;
+  --bs-code-color: #ff8c00;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: #fff3cd;
   --bs-border-color: #efefef;
